feat: add config propeties

--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.datasource.url = jdbc:postgresql://localhost:5432/ms-user
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.show-sql=true
+
+spring.rabbitmq.addresses=amqps://sxtytwma:BzP_SC0FsWf192bIXinTgAUEjmLctOXr@beaver.rmq.cloudamqp.com/sxtytwma
+
+broker.queue.email.name=default.email
